add admin aditor
